Re-structured odin-recipes

--- a/recipes/pork-humba.html
+++ b/recipes/pork-humba.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Pork Humba</h1>
-    <img src="/Pork-Humba.jpg" alt="Pork Humba">
+    <img src="../img/Pork-Humba.jpg" alt="Pork Humba" width="310" height="310">
 </body>
 </html>
