--- a/recipes/pork-humba.html
+++ b/recipes/pork-humba.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Pork Humba</h1>
     <img src="../img/Pork-Humba.jpg" alt="Pork Humba" width="310" height="310">
+    <p>Chinese-Filipino cuisine has been a part of our culture for decades. Since pre-colonial times when traders used
+        to dock on our shores, the Chinese have shared with us not only their barter and bargaining practices, but also
+        their cooking. Dishes like pancit, lumpia, and mami are some examples of traditional Chinese dishes that have
+        been given a Filipino spin. Humba is yet another example of Chinese cuisine’s integration into Filipno culture.
+        Initially, this pork dish was actually based off of the Chinese hong ma or hong ba –– red braised pork belly.
+    </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 lbs pork belly</li>
+        <li>1 cup Pineapple juice</li>
+        <li>1 large onion <em>diced</em></li>
+        <li>5 cloves garlic <em>minced</em></li>
+        <li>2 tablespoons salted black beans</li>
+        <li>2 tablespoons soy sauce</li>
+        <li>2 tablespoons vinegar</li>
+        <li>2 1/2 tablespoons brown sugar</li>
+        <li>1/2 cup dried banana blossoms</li>
+        <li>2 pieces dried bay leaves</li>
+        <li>1 teaspoon whole peppercorn</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat the cooking pot then brown the pork belly</li>
+        <li>Add the onions and garlic and cook until the onions are soft</li>
+        <li>Put-in the soy sauce, peppercorn, bay leaves</li>
+        <li>Pour-in the pineapple juice and let boil. Simmer until the pork is tender (add water as needed)</li>
+        <li>Add the vinegar and wait for the mixture to re-boil. Simmer for 3 minutes</li>
+        <li>Spoon-in the salted black beans and brown sugar then simmer for 5 minutes</li>
+        <li>Add the dried banana blossoms and simmer for 5 to 8 minutes</li>
+        <li>Transfer to a serving plate and serve. Share and enjoy!</li>
+    </ol>
 </body>
+
 </html>
