Added new recipes: Chopsuey and Filipino Spaghetti; edits fractions in pork humba recipe

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/pork-humba.html">Pork Humba</a></li>
-        <li><a href="">Chopsuey</a></li>
+        <li><a href="recipes/chopsuey.html">Chopsuey</a></li>
+        <li><a href="recipes/pinoy-spaghetti.html">Pinoy Style Spaghetti</a></li>
     </ul>
 </body>
 </html>
