--- a/recipes/pork-humba.html
+++ b/recipes/pork-humba.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pork Humba Recipe</title>
 </head>
 
 <body>
@@ -26,8 +26,8 @@
         <li>2 tablespoons salted black beans</li>
         <li>2 tablespoons soy sauce</li>
         <li>2 tablespoons vinegar</li>
-        <li>2 1/2 tablespoons brown sugar</li>
-        <li>1/2 cup dried banana blossoms</li>
+        <li>2 &#189; tablespoons brown sugar</li>
+        <li>&#189; cup dried banana blossoms</li>
         <li>2 pieces dried bay leaves</li>
         <li>1 teaspoon whole peppercorn</li>
     </ul>
