--- a/recipes/pinoy-spaghetti.html
+++ b/recipes/pinoy-spaghetti.html
@@ -4,43 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinoy Style Spaghetti Recipe</title>
+
+    <link rel="stylesheet" href="./css/spaghetti.css">
 </head>
+
 <body>
-    <h1>Pinoy Style Spaghetti</h1>
-    <img src="../img/Pinoy-Spaghetti.jpg" width="310" height="310">
-    <p>If you’ve ever had a bite of Filipino Spaghetti, you would know that it can taste pretty different compared to the classic version. That’s because we’ve got a whole lot more sweetness as a result of Filipino style spaghetti sauce.</p>
-    <p>This is a lot meatier too because we definitely will not be cutting back on that type of ingredient. We’ve got some deliciously savory hotdogs, ground pork and ham. What I also incorporated in this recipe to distinguish it from some other Filipino spaghetti dishes is a boost of crunchiness with a mix of subtle sweetness. We’ve got red and green bell peppers for our recipe too.</p>
+    <nav class="navbar">
+        <ul class="navitems">
+            <li class="logo"><a href="../index.html"><img src="../img/odinlogo.png" class="imglogo" width="100" height="100"></a></li>
+            <li class="odin"><h1>Odin Recipes</h1></li>
+            <li class="navmenu">
+                <ul class="navmenuitems">
+                    <li><a class="header-menu" href="../index.html">Home</a></li>
+                    <li><a class="header-menu" href="">About</a></li>
+                    <li><a class="header-menu" href="">Contact</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    
+    <h1 class="recipename">Pinoy Style Spaghetti</h1>
+    <div class="imgdiv"><img class="bodyimg" src="../img/Pinoy-Spaghetti.jpg" alt="Pinoy Spaghetti - recipe from https://panlasangpinoy.com/the-only-filipino-spaghetti-recipe-that-i-trust-for-the-holidays/" width="420" height="380"></div>
+    <div class="content">
+        <p>If you’ve ever had a bite of Filipino Spaghetti, you would know that it can taste pretty different compared to the classic version. That’s because we’ve got a whole lot more sweetness as a result of Filipino style spaghetti sauce.</p>
+        <p>This is a lot meatier too because we definitely will not be cutting back on that type of ingredient. We’ve got some deliciously savory hotdogs, ground pork and ham. What I also incorporated in this recipe to distinguish it from some other Filipino spaghetti dishes is a boost of crunchiness with a mix of subtle sweetness. We’ve got red and green bell peppers for our recipe too.</p>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 lb. spaghetti noodles</li>
-        <li>1 lb. ground pork</li>
-        <li>35 ounces Filipino style spaghetti sauce</li>
-        <li>1 Knorr Pork Cube</li>
-        <li>3 ounces ham <em>sliced</em></li>
-        <li>5 hotdogs <em>sliced diagonally</em></li>
-        <li>&#189; cup red bell pepper <em>minced</em></li>
-        <li>&#189; cup green bell pepper <em>minced</em></li>
-        <li>1 yellow onion <em>minced</em></li>
-        <li>4 cloves garlic <em>minced</em></li>
-        <li>8 cups water</li>
-        <li>1 cup shredded cheddar cheese</li>
-        <li>3 tablespoons cooking oil</li>
-        <li>Salt and ground black pepper to taste</li>        
-    </ul>
+        <h2><span class="h2span">Ingredients</span></h2>
+        <ul>
+            <li>1 lb. spaghetti noodles</li>
+            <li>1 lb. ground pork</li>
+            <li>35 ounces Filipino style spaghetti sauce</li>
+            <li>1 Knorr Pork Cube</li>
+            <li>3 ounces ham <em>sliced</em></li>
+            <li>5 hotdogs <em>sliced diagonally</em></li>
+            <li>&#189; cup red bell pepper <em>minced</em></li>
+            <li>&#189; cup green bell pepper <em>minced</em></li>
+            <li>1 yellow onion <em>minced</em></li>
+            <li>4 cloves garlic <em>minced</em></li>
+            <li>8 cups water</li>
+            <li>1 cup shredded cheddar cheese</li>
+            <li>3 tablespoons cooking oil</li>
+            <li>Salt and ground black pepper to taste</li>        
+        </ul>
 
-    <h3>Steps</h3>
-    <ol>
-        <li>Boil water in a cooking pot. Add a teaspoon of salt. Put the spaghetti noodles in the pot. Cook according to package instructions. Drain the water and set the spaghetti aside.</li>
-        <li>Make the sauce by heating oil in a cooking pot. Saut&#233; garlic and onion until the onion softens.</li>
-        <li>Add the ground pork. Cook it while stirring until it turns light brown in color.</li>
-        <li>Add the ham and hotdogs. Saut&#233; for 2 minutes.</li>
-        <li>Put the bell peppers into the pot. Continue cooking for 1 minute.</li>
-        <li>Pour the spaghetti sauce. Add 1 cup water. Stir and let boil.</li>
-        <li>Add Knorr pork cube. Cover the pot and reduce the heat to a simmer. Cook for 30 minutes while stirring every 6 minutes or so.</li>
-        <li>Season with salt and ground black pepper. You can add some grated cheese</li>
-        <li>Arrange spaghetti on a serving plate. Top with spaghetti sauce and shredded cheese.</li>
-        <li>Serve. Share and enjoy!</li>
-    </ol>
+        <h2><span class="h2span">Steps</span></h2>
+        <ol>
+            <li>Boil water in a cooking pot. Add a teaspoon of salt. Put the spaghetti noodles in the pot. Cook according to package instructions. Drain the water and set the spaghetti aside.</li>
+            <li>Make the sauce by heating oil in a cooking pot. Saut&#233; garlic and onion until the onion softens.</li>
+            <li>Add the ground pork. Cook it while stirring until it turns light brown in color.</li>
+            <li>Add the ham and hotdogs. Saut&#233; for 2 minutes.</li>
+            <li>Put the bell peppers into the pot. Continue cooking for 1 minute.</li>
+            <li>Pour the spaghetti sauce. Add 1 cup water. Stir and let boil.</li>
+            <li>Add Knorr pork cube. Cover the pot and reduce the heat to a simmer. Cook for 30 minutes while stirring every 6 minutes or so.</li>
+            <li>Season with salt and ground black pepper. You can add some grated cheese</li>
+            <li>Arrange spaghetti on a serving plate. Top with spaghetti sauce and shredded cheese.</li>
+            <li>Serve. Share and enjoy!</li>
+        </ol>
+    </div>
 </body>
 </html>
